Add Elsa theme, layout page using theme elements

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,30 @@
-<section class="padded">
-  <h1>Footer</h1>
-</section>
+<div id="section-footer" class="block block-footer block-footer-light">
+  <div class="container">
+    <!--Subheader -->
+    <div class="row justify-content-center">
+      <div class="col-md-8 content-subheader">
+      </div>
+    </div>
+    <!-- / Subheader -->
+
+    <!-- Social media links -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-md-3 text-center">
+        <div class="footer-social-media d-flex justify-content-around">
+          <a href="#" class="link-icon"><span class="icon-md icon-dark icon-facebook"></span></a>
+          <a href="#" class="link-icon"><span class="icon-md icon-dark icon-twitter"></span></a>
+          <a href="#" class="link-icon"><span class="icon-md icon-dark icon-instagrem"></span></a>
+        </div>
+      </div>
+    </div>
+    <!-- / Social media links -->
+
+    <!-- Legals -->
+    <div class="row">
+      <div class="col content-footer-legals">
+        Copyright © 2017 Posboss Limited. All Rights Reserved.
+      </div>
+    </div>
+    <!-- / Legals -->
+  </div>
+</div>
