--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,3 +1,54 @@
-<section class="padded">
-  <h1>Hero</h1>
-</section>
+<div class="main-hero" id="home">
+  <div class="main-hero-bg">
+    <div class="container">
+      <!-- Nav -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+        <a class="navbar-brand" href="#">
+          <img src="img/logo.svg" width="60" height="60" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto mr-4">
+            <li class="nav-item active">
+              <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#features">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#icons">Icons</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#metrics">Metrics</a>
+            </li>
+          </ul>
+          <a href="#download" class="btn btn-outline-light my-2 my-sm-0">Download</a>
+        </div>
+      </nav>
+      <!-- / Nav -->
+
+      <!-- Hero -->
+      <div class="row align-items-center py-5">
+        <div class="col-md-6 text-center text-md-left">
+          <h1 class="mb-4">The only team chat tool you need</h1>
+          <p>I showed my masterpiece to the grown-ups, and asked them whether the drawing frightened them.</p>
+          <div class="row mt-5">
+            <div class="col-md-auto">
+              <a href="#download" class="btn btn-lg btn-outline-light">Free Download</a>
+            </div>
+            <div class="col-md-auto mt-3 mt-lg-0">
+              <a href="#features" class="btn btn-lg btn-light">Learn more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 text-center mt-4 mt-md-0">
+          <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1">
+        </div>
+      </div>
+      <!-- / Hero -->
+    </div>
+  </div>
+</div>
