--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,9 @@
   </head>
   <body>
     {{ content }}
+
+    <script src="js/jquery-3.2.1.slim.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
