--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -1,3 +1,71 @@
-<section class="padded">
-  <h1>Benefits</h1>
-</section>
+<div class="block block-main-feature block-main-feature-4">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md text-center">
+        <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1" data-enter="fadein" style="transform: translateY(70px)">
+      </div>
+      <div class="col-md mt-4 mt-md-0">
+        <h2>Another unique feature</h2>
+        <p>
+          On making his discovery, the astronomer had presented it to the
+          International Astronomical Congress, in a great demonstration.
+        </p>
+        <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="block block-main-feature block-main-feature-5">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md">
+        <h2>Another unique feature</h2>
+        <p>
+          On making his discovery, the astronomer had presented it to the
+          International Astronomical Congress, in a great demonstration.
+        </p>
+        <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+      </div>
+      <div class="col-md text-center mt-4 mt-md-0">
+        <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1" data-enter="fadein" style="transform: translateY(70px)">
+      </div>
+    </div>
+  </div>
+</div>
+
+    <div class="block block-main-feature block-main-feature-4">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md text-center">
+        <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1" data-enter="fadein" style="transform: translateY(70px)">
+      </div>
+      <div class="col-md mt-4 mt-md-0">
+        <h2>Another unique feature</h2>
+        <p>
+          On making his discovery, the astronomer had presented it to the
+          International Astronomical Congress, in a great demonstration.
+        </p>
+        <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="block block-main-feature block-main-feature-5">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md">
+        <h2>Another unique feature</h2>
+        <p>
+          On making his discovery, the astronomer had presented it to the
+          International Astronomical Congress, in a great demonstration.
+        </p>
+        <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+      </div>
+      <div class="col-md text-center mt-4 mt-md-0">
+        <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1" data-enter="fadein" style="transform: translateY(70px)">
+      </div>
+    </div>
+  </div>
+</div>
