--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,3 +1,34 @@
-<section class="padded">
-  <h1>Features</h1>
-</section>
+<div class="block block-main-feature block-main-feature-1">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col">
+        <h2>It helps everyone in the team</h2>
+        <p>
+          When a mystery is too overpowering, one dare not disobey. Absurd as
+          it might seem to me, a thousand miles from any human habitation and
+          in danger of death, I took out of my pocket a sheet of paper and my
+          fountain-pen.
+        </p>
+        <div class="row my-5">
+          <div class="col-md content-feature-sub">
+            <p><span class="icon-themed icon-sm icon-phone"></span></p>
+            <h3>Voice calling</h3>
+            <p>
+              My friend smiled gently and indulgently.
+            </p>
+          </div>
+          <div class="col-md content-feature-sub mt-4 mt-md-0">
+            <p><span class="icon-themed icon-sm icon-map"></span></p>
+            <h3>Location aware</h3>
+            <p>
+              And I threw out an explanation with it.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md text-center">
+        <img src="img/device-portrait-light.png" alt="Device" class="img-fluid img-device mw-330" data-enter="fadein" style="transform: translateY(70px)">
+      </div>
+    </div>
+  </div>
+</div>
