--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,5 +5,6 @@ layout: default
 {% include hero.html %}
 {% include features.html %}
 {% include benefits.html %}
+{% include download.html %}
 {% include for-business.html %}
 {% include footer.html %}
