Update content and styles in 'for business' section

--- a/_includes/for-business.html
+++ b/_includes/for-business.html
@@ -1,68 +1,21 @@
-<div class="block block-footer block-footer-themed">
+<div id="section-for-business" class="block block-footer block-footer-themed">
   <div class="container">
     <!--Subheader -->
     <div class="row justify-content-center">
       <div class="col-md-8 content-subheader">
-        <h2>Stay up-to-date</h2>
+        <h2>Regulr for Businesses</h2>
       </div>
     </div>
     <!-- / Subheader -->
 
-    <!-- Social media links -->
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-3 text-center">
-        <div class="footer-social-media d-flex justify-content-around">
-          <a href="#" class="link-icon"><span class="icon-md icon-light icon-facebook"></span></a>
-          <a href="#" class="link-icon"><span class="icon-md icon-light icon-twitter"></span></a>
-          <a href="#" class="link-icon"><span class="icon-md icon-light icon-instagrem"></span></a>
-        </div>
-      </div>
-    </div>
-    <!-- / Social media links -->
-
-    <!-- Newsletter -->
+    <!-- Link -->
     <div class="row mt-4">
       <div class="col text-center">
-        <p>Subscribe to our newsletter to receive exclusive content.</p>
-        <form>
-          <div class="form-row justify-content-center">
-            <div class="col-md-4">
-              <label class="sr-only" for="inlineFormInput">Your e-mail</label>
-              <input type="text" class="form-control form-control-lg mb-2 mb-md-0" id="inlineFormInput" placeholder="Your e-mail">
-            </div>
-            <div class="col-auto">
-              <button type="submit" class="btn btn-lg btn-outline-light">Sign me up!</button>
-            </div>
-          </div>
-        </form>
+        <p>Posboss will hook you up with all the things to get set up with Regulr.</p>
+        <a href="http://posbosshq.com/" class="btn btn-lg btn-outline-light">Talk to Posboss</a>
       </div>
     </div>
-    <!-- / Newsletter -->
+    <!-- / Link -->
 
-    <!-- Links -->
-    <div class="row justify-content-center">
-      <div class="col-md-8 content-footer-bottom-links">
-        <ul class="nav justify-content-center">
-          <li class="nav-item">
-            <a class="nav-link text-light" href="#">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-light" href="#">Terms</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-light" href="#">Privacy</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <!-- / Links -->
-
-    <!-- Legals -->
-    <div class="row">
-      <div class="col content-footer-legals">
-        Copyright © 2017 Elsa Inc. All Rights Reserved.
-      </div>
-    </div>
-    <!-- / Legals -->
   </div>
 </div>
