--- a/css/main.scss
+++ b/css/main.scss
@@ -6,4 +6,9 @@
 @import "vendor/entypo";
 @import "vendor/theme";
 
+#section-for-business { @import "for-business"; }
 #section-footer { @import "footer"; }
+
+.btn {
+  cursor: pointer;
+}
