Add posboss icon to download section and to hero

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col text-center">
-        <img src="img/logo-themed-2.svg" width="160" height="160" alt="Logo">
-        <h2 class="my-3">Elsa App</h2>
+        <img src="img/posboss-app.svg" width="160" height="160" alt="Logo">
+        <h2 class="my-3">Regulr App</h2>
         <div class="content-reviews">
           <span class="icon-star"></span>
           <span class="icon-star"></span>
