--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -4,7 +4,7 @@
       <!-- Nav -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <a class="navbar-brand" href="#">
-          <img src="img/logo.svg" width="60" height="60" alt="Logo">
+          <img src="img/posboss.svg" width="100" height="100" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
