Update navigation links and section ids

--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,4 +1,4 @@
-<div class="block block-main-feature block-main-feature-1">
+<div id="section-features" class="block block-main-feature block-main-feature-1">
   <div class="container">
     <div class="row align-items-center">
       <div class="col">
