--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -16,13 +16,13 @@
               <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#features">Features</a>
+              <a class="nav-link" href="#section-features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#icons">Icons</a>
+              <a class="nav-link" href="#icons">Benefits</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#metrics">Metrics</a>
+              <a class="nav-link" href="#section-for-business">For Businesses</a>
             </li>
           </ul>
           <a href="#download" class="btn btn-outline-light my-2 my-sm-0">Download</a>
@@ -40,7 +40,7 @@
               <a href="#download" class="btn btn-lg btn-outline-light">Free Download</a>
             </div>
             <div class="col-md-auto mt-3 mt-lg-0">
-              <a href="#features" class="btn btn-lg btn-light">Learn more</a>
+              <a href="#section-features" class="btn btn-lg btn-light">Learn more</a>
             </div>
           </div>
         </div>
