Update content and styles of hero

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,10 +1,10 @@
-<div class="main-hero" id="home">
+<div class="main-hero" id="section-hero">
   <div class="main-hero-bg">
     <div class="container">
       <!-- Nav -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <a class="navbar-brand" href="#">
-          <img src="img/posboss.svg" width="100" height="100" alt="Logo">
+          <img src="img/posboss-app.svg" width="100" height="100" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,9 +32,11 @@
 
       <!-- Hero -->
       <div class="row align-items-center py-5">
-        <div class="col-md-6 text-center text-md-left">
-          <h1 class="mb-4">The only team chat tool you need</h1>
-          <p>I showed my masterpiece to the grown-ups, and asked them whether the drawing frightened them.</p>
+        <div class="col-md-6 text-center mt-4 mt-md-0">
+        </div>
+         <div class="col-md-6 text-center text-md-left">
+          <h1 class="mb-4">Support your {Establishment}</h1>
+          <p>Become a regulr.</p>
           <div class="row mt-5">
             <div class="col-md-auto">
               <a href="#download" class="btn btn-lg btn-outline-light">Free Download</a>
@@ -43,9 +45,6 @@
               <a href="#section-features" class="btn btn-lg btn-light">Learn more</a>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 text-center mt-4 mt-md-0">
-          <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1">
         </div>
       </div>
       <!-- / Hero -->
