Add new hero image and animated text to hero section

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col text-center">
         <img src="img/posboss-app.svg" width="160" height="160" alt="Logo">
-        <h2 class="my-3">Regulr App</h2>
+        <h2 class="my-3">regulr app</h2>
         <div class="content-reviews">
           <span class="icon-star"></span>
           <span class="icon-star"></span>
