--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,6 @@
   </head>
   <body>
     {{ content }}
-
-    <script src="js/jquery-3.2.1.slim.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bundle.js"></script>
+    {% include scripts.html %}
   </body>
 </html>
