--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,8 @@
 @import "vendor/bootstrap";
 @import "vendor/entypo";
 @import "vendor/theme";
+@import "vendor/animate";
+@import "vendor/morphext";
 @import "variables";
 
 #section-hero { @import "hero"; }
