--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -12,9 +12,6 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mr-4">
-            <li class="nav-item active">
-              <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="#section-features">Features</a>
             </li>
@@ -32,10 +29,8 @@
 
       <!-- Hero -->
       <div class="row align-items-center py-5">
-        <div class="col-md-6 text-center mt-4 mt-md-0">
-        </div>
          <div class="col-md-6 text-center text-md-left">
-          <h1 class="mb-4">Support your {Establishment}</h1>
+          <h1 class="mb-4">Support your local <span id="js-rotating">cafe, bar, restaurant</span>.</h1>
           <p>Become a regulr.</p>
           <div class="row mt-5">
             <div class="col-md-auto">
@@ -45,6 +40,8 @@
               <a href="#section-features" class="btn btn-lg btn-light">Learn more</a>
             </div>
           </div>
+        </div>
+        <div class="col-md-6 text-center mt-4 mt-md-0">
         </div>
       </div>
       <!-- / Hero -->
