--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,10 +1,7 @@
-<div class="main-hero" id="section-hero">
-  <div class="main-hero-bg">
-    <div class="container">
-      <!-- Nav -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+<div id="section-hero">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <a class="navbar-brand" href="#">
-          <img src="img/posboss-app.svg" width="100" height="100" alt="Logo">
+          <img src="img/posboss-app.svg" width="50" height="50" alt="Logo">regulr
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,26 +22,33 @@
           <a href="#download" class="btn btn-outline-light my-2 my-sm-0">Download</a>
         </div>
       </nav>
-      <!-- / Nav -->
+  <div class="main-hero">
+  <div class="main-hero-bg">
 
-      <!-- Hero -->
-      <div class="row align-items-center py-5">
-         <div class="col-md-6 text-center text-md-left">
-          <h1 class="mb-4">Support your local <span id="js-rotating">cafe, bar, restaurant</span>.</h1>
-          <p>Become a regulr.</p>
-          <div class="row mt-5">
-            <div class="col-md-auto">
-              <a href="#download" class="btn btn-lg btn-outline-light">Free Download</a>
-            </div>
-            <div class="col-md-auto mt-3 mt-lg-0">
-              <a href="#section-features" class="btn btn-lg btn-light">Learn more</a>
+      <div class="container">
+        <!-- Nav -->
+
+        <!-- / Nav -->
+
+        <!-- Hero -->
+        <div class="row align-items-center py-5 cta">
+           <div class="col-md-6 text-center text-md-left">
+            <h1 class="mb-4">Support your local <span id="js-rotating">cafe, bar, restaurant</span>.</h1>
+            <p>Become a regulr.</p>
+            <div class="row mt-5 cta-button-group">
+              <div class="col-md-auto">
+                <a href="#download" class="btn btn-lg btn-outline-light">Free Download</a>
+              </div>
+              <div class="col-md-auto mt-3 mt-lg-0">
+                <a href="#section-features" class="btn btn-lg btn-light">Learn more</a>
+              </div>
             </div>
           </div>
+          <div class="col-md-6 text-center mt-4 mt-md-0">
+          </div>
         </div>
-        <div class="col-md-6 text-center mt-4 mt-md-0">
-        </div>
+        <!-- / Hero -->
       </div>
-      <!-- / Hero -->
     </div>
   </div>
 </div>
