--- a/_includes/features.html
+++ b/_includes/features.html
@@ -2,26 +2,37 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col">
-        <h2>It helps everyone in the team</h2>
-        <p>
-          When a mystery is too overpowering, one dare not disobey. Absurd as
-          it might seem to me, a thousand miles from any human habitation and
-          in danger of death, I took out of my pocket a sheet of paper and my
-          fountain-pen.
-        </p>
+        <h2>Features</h2>
+        <p>(When you click/hover these, it will show a corresponding screenshot on the phone)</p>
         <div class="row my-5">
           <div class="col-md content-feature-sub">
-            <p><span class="icon-themed icon-sm icon-phone"></span></p>
-            <h3>Voice calling</h3>
+            <p><span class="icon-themed icon-lg icon-home"></span></p>
+            <h3>Add your local</h3>
             <p>
-              My friend smiled gently and indulgently.
+              Extra description of feature here.
             </p>
           </div>
-          <div class="col-md content-feature-sub mt-4 mt-md-0">
-            <p><span class="icon-themed icon-sm icon-map"></span></p>
-            <h3>Location aware</h3>
+          <div class="col-md content-feature-sub">
+            <p><span class="icon-themed icon-lg icon-user"></span></p>
+            <h3>Personalise your profile</h3>
             <p>
-              And I threw out an explanation with it.
+              Extra description of feature here.
+            </p>
+          </div>
+        </div>
+        <div class="row my-5">
+          <div class="col-md content-feature-sub">
+            <p><span class="icon-themed icon-lg icon-cup"></span></p>
+            <h3>Order a treat</h3>
+            <p>
+              Extra description of feature here.
+            </p>
+          </div>
+          <div class="col-md content-feature-sub">
+            <p><span class="icon-themed icon-lg icon-heart"></span></p>
+            <h3>Become a regulr</h3>
+            <p>
+              Extra description of feature here.
             </p>
           </div>
         </div>
