Update content and styles in benefits section

--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -1,70 +1,68 @@
-<div class="block block-main-feature block-main-feature-4">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md text-center">
-        <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1" data-enter="fadein" style="transform: translateY(70px)">
-      </div>
-      <div class="col-md mt-4 mt-md-0">
-        <h2>Another unique feature</h2>
-        <p>
-          On making his discovery, the astronomer had presented it to the
-          International Astronomical Congress, in a great demonstration.
-        </p>
-        <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="block block-main-feature block-main-feature-5">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md">
-        <h2>Another unique feature</h2>
-        <p>
-          On making his discovery, the astronomer had presented it to the
-          International Astronomical Congress, in a great demonstration.
-        </p>
-        <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
-      </div>
-      <div class="col-md text-center mt-4 mt-md-0">
-        <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1" data-enter="fadein" style="transform: translateY(70px)">
+<div id="section-benefits" >
+  <div class="block block-main-feature benefit-1">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md text-center">
+          <img src="img/benefit-01.png" class="img-fluid rounded benefit-img" data-enter="fadein" style="transform: translateY(70px)">
+        </div>
+        <div class="col-md mt-4 mt-md-0">
+          <h2>Become a friend of your local</h2>
+          <p>
+            Longer description of benefit
+          </p>
+          <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-    <div class="block block-main-feature block-main-feature-4">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md text-center">
-        <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1" data-enter="fadein" style="transform: translateY(70px)">
-      </div>
-      <div class="col-md mt-4 mt-md-0">
-        <h2>Another unique feature</h2>
-        <p>
-          On making his discovery, the astronomer had presented it to the
-          International Astronomical Congress, in a great demonstration.
-        </p>
-        <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+  <div class="block block-main-feature benefit-2">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md">
+          <h2>Know what's the special for the day</h2>
+           <p>
+            Longer description of benefit
+          </p>
+          <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+        </div>
+        <div class="col-md text-center mt-4 mt-md-0">
+          <img src="img/benefit-02.png" class="img-fluid rounded benefit-img" data-enter="fadein" style="transform: translateY(70px)">
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="block block-main-feature block-main-feature-5">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md">
-        <h2>Another unique feature</h2>
-        <p>
-          On making his discovery, the astronomer had presented it to the
-          International Astronomical Congress, in a great demonstration.
-        </p>
-        <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+      <div class="block block-main-feature benefit-3">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md text-center">
+          <img src="img/benefit-03.png" class="img-fluid rounded benefit-img" data-enter="fadein" style="transform: translateY(70px)">
+        </div>
+        <div class="col-md mt-4 mt-md-0">
+          <h2>Order 'the usual' in two taps</h2>
+           <p>
+            Longer description of benefit
+          </p>
+          <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+        </div>
       </div>
-      <div class="col-md text-center mt-4 mt-md-0">
-        <img src="img/app-screen-02.png" class="img-fluid rounded shadow-1" data-enter="fadein" style="transform: translateY(70px)">
+    </div>
+  </div>
+
+  <div class="block block-main-feature benefit-4">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md">
+          <h2>Pay weekly on the day that suits you</h2>
+           <p>
+            Longer description of benefit
+          </p>
+          <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+        </div>
+        <div class="col-md text-center mt-4 mt-md-0">
+          <img src="img/benefit-04.png" class="img-fluid rounded benefit-img" data-enter="fadein" style="transform: translateY(70px)">
+        </div>
       </div>
     </div>
   </div>
