--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -13,7 +13,7 @@
               <a class="nav-link" href="#section-features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#icons">Benefits</a>
+              <a class="nav-link" href="#section-benefits">Benefits</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#section-for-business">For Businesses</a>
