--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,4 +2,5 @@ $regulr-blue: #4EA5FC;
 $regulr-green: #16D97E;
 $regulr-purple: #B080F2;
 $regulr-red: #F44236;
+$regulr-yellow: #F2C61F;
 $icon-background: $regulr-red;
