--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,7 @@
 
 #section-hero { @import "hero"; }
 #section-features { @import "features"; }
+#section-benefits { @import "benefits"; }
 #section-for-business { @import "for-business"; }
 #section-footer { @import "footer"; }
 
