--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,17 @@
 <div id="section-footer" class="block block-footer block-footer-light">
   <div class="container">
-    <!--Subheader -->
     <div class="row justify-content-center">
       <div class="col-md-8 content-subheader">
+        <h2>regulr</h2>
+        <h3>ˈrɛɡjʊlə/</h3>
+        <ol>
+          <li>
+            <p><span>noun</span></p>
+            <p>knowing their name, knowing their order, knowing they're loyal.</p>
+          </li>
+        </ol>
       </div>
     </div>
-    <!-- / Subheader -->
 
     <!-- Social media links -->
     <div class="row justify-content-center mt-4">
