--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,6 +1,29 @@
 .content-subheader {
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
-  padding-top: 2rem;
+  border-top: 1px solid $regulr-red;
+  border-bottom: 1px solid $regulr-red;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  margin-bottom: 3rem;
+  text-align: left;
+  color: black;
+
+  h2 {
+    color: $regulr-red;
+    font-weight: 600;
+  }
+
+  h3 {
+    margin: 1.5rem 0;
+    font-size: 1rem;
+  }
+
+  p {
+    margin: 0.1rem;
+
+    span {
+      font-style: italic;
+    }
+  }
 }
 
 .footer-social-media {
