--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
     <title>Regulr App</title>
     <meta name="description" content="">
 
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 
   </head>
   <body>
