Update content and layout

--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -6,9 +6,10 @@
           <img src="img/benefit-01.png" class="img-fluid rounded benefit-img" data-enter="fadein" style="transform: translateY(70px)">
         </div>
         <div class="col-md mt-4 mt-md-0">
-          <h2>Become a friend of your local</h2>
+          <h2>Get friendly with your local.</h2>
           <p>
-            Longer description of benefit
+            Become a regular at all your favourite spots, tap to order your favourite snacks and sips,
+            and get to know the guys that make your day, everyday.
           </p>
           <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
         </div>
@@ -20,9 +21,10 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md">
-          <h2>Know what's the special for the day</h2>
+          <h2>Check out what’s good today.</h2>
            <p>
-            Longer description of benefit
+             Some days are toastie days. Other days it’s bacon all the way.
+             Check out what your local spot’s cooking up today and grab whatever tickles your fancy.
           </p>
           <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
         </div>
@@ -40,9 +42,10 @@
           <img src="img/benefit-03.png" class="img-fluid rounded benefit-img" data-enter="fadein" style="transform: translateY(70px)">
         </div>
         <div class="col-md mt-4 mt-md-0">
-          <h2>Order 'the usual' in two taps</h2>
+          <h2>Want the usual? Just tap twice.</h2>
            <p>
-            Longer description of benefit
+             Need a coffee and need it now? Want that sammie you love with loads of extra gherkins?
+             No problem, just a couple of taps and your usual’s on the way.
           </p>
           <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
         </div>
@@ -54,9 +57,10 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md">
-          <h2>Pay weekly on the day that suits you</h2>
+          <h2>No wallet, no worries.</h2>
            <p>
-            Longer description of benefit
+             Regulr works just like a tab at your local spots, so you can pick up the goods, say a quick hey and be on your way.
+             Then every Sunday, your tab gets settled while you chill.
           </p>
           <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
         </div>
