--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,38 +1,39 @@
 <div id="section-features" class="block block-main-feature block-main-feature-1">
+  <div class="text-center mb-5">
+    <h2>How it works</h2>
+  </div>
   <div class="container">
     <div class="row align-items-center">
       <div class="col">
-        <h2>Features</h2>
-        <p>(When you click/hover these, it will show a corresponding screenshot on the phone)</p>
         <div class="row my-5">
           <div class="col-md content-feature-sub">
             <p><span class="icon-themed icon-lg icon-home"></span></p>
-            <h3>Add your local</h3>
+            <h3>Find your local.</h3>
             <p>
-              Extra description of feature here.
+              Look up the awesome spots around you and create a list of your favourites.
             </p>
           </div>
           <div class="col-md content-feature-sub">
             <p><span class="icon-themed icon-lg icon-user"></span></p>
-            <h3>Personalise your profile</h3>
+            <h3>Make it personal.</h3>
             <p>
-              Extra description of feature here.
+              Put a name to your face and an emoji to your name. Show them the real you.
             </p>
           </div>
         </div>
         <div class="row my-5">
           <div class="col-md content-feature-sub">
             <p><span class="icon-themed icon-lg icon-cup"></span></p>
-            <h3>Order a treat</h3>
+            <h3>Grab your usual.</h3>
             <p>
-              Extra description of feature here.
+              Know what you want? Order it in a couple of taps, just the way you like it.
             </p>
           </div>
           <div class="col-md content-feature-sub">
             <p><span class="icon-themed icon-lg icon-heart"></span></p>
-            <h3>Become a regulr</h3>
+            <h3>Be a regular.</h3>
             <p>
-              Extra description of feature here.
+              Less time at the till means more time chatting with your new mates. Enjoy.
             </p>
           </div>
         </div>
@@ -40,6 +41,9 @@
       <div class="col-md text-center">
         <img src="img/device-portrait-light.png" alt="Device" class="img-fluid img-device mw-330" data-enter="fadein" style="transform: translateY(70px)">
       </div>
+    </div>
+    <div class="mt-5 text-center">
+      <a href="#download" class="btn btn-lg btn-dark">Get Regulr</a>
     </div>
   </div>
 </div>
