--- a/_includes/for-business.html
+++ b/_includes/for-business.html
@@ -3,7 +3,7 @@
     <!--Subheader -->
     <div class="row justify-content-center">
       <div class="col-md-8 content-subheader">
-        <h2>Regulr for Businesses</h2>
+        <h2>Regulr for Business</h2>
       </div>
     </div>
     <!-- / Subheader -->
@@ -11,8 +11,8 @@
     <!-- Link -->
     <div class="row mt-4">
       <div class="col text-center">
-        <p>Posboss will hook you up with all the things to get set up with Regulr.</p>
-        <a href="http://posbosshq.com/" class="btn btn-lg btn-outline-light">Talk to Posboss</a>
+        <p>posBoss will hook you up with everything you need to get started on Regulr.</p>
+        <a href="http://posbosshq.com/" class="btn btn-lg btn-outline-light">Let's go</a>
       </div>
     </div>
     <!-- / Link -->
