--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mr-4">
             <li class="nav-item">
-              <a class="nav-link" href="#section-features">Features</a>
+              <a class="nav-link" href="#section-features">How it works</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#section-benefits">Benefits</a>
+              <a class="nav-link" href="#section-benefits">Why it's great</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#section-for-business">For Businesses</a>
+              <a class="nav-link" href="#section-for-business">Regulr for business</a>
             </li>
           </ul>
           <a href="#download" class="btn btn-outline-light my-2 my-sm-0">Download</a>
@@ -26,21 +26,17 @@
   <div class="main-hero-bg">
 
       <div class="container">
-        <!-- Nav -->
-
-        <!-- / Nav -->
-
         <!-- Hero -->
         <div class="row align-items-center py-5 cta">
            <div class="col-md-6 text-center text-md-left">
-            <h1 class="mb-4">Support your local <span id="js-rotating">cafe, bar, restaurant</span>.</h1>
-            <p>Become a regulr.</p>
+            <h1 class="mb-4">Get to know your local <span id="js-rotating">café, restaurant, bar</span>.</h1>
+            <p>Love your local? Become a regular.</p>
             <div class="row mt-5 cta-button-group">
               <div class="col-md-auto">
                 <a href="#download" class="btn btn-lg btn-outline-light">Free Download</a>
               </div>
               <div class="col-md-auto mt-3 mt-lg-0">
-                <a href="#section-features" class="btn btn-lg btn-light">Learn more</a>
+                <a href="#section-features" class="btn btn-lg btn-light">Find out more</a>
               </div>
             </div>
           </div>
