--- a/_sass/_features.scss
+++ b/_sass/_features.scss
@@ -1,8 +1,12 @@
 .content-feature-sub {
   // margin: 2rem 0;
   text-align: center;
-  line-height: 2.5rem;
-  padding: 2rem 0;
+  line-height: 1.5rem;
+  padding: 2rem 1rem;
+
+  h3 {
+    margin: 1.5rem 0;
+  }
 
   &:hover {
     background-color: rgba(244, 66, 54, 0.2);
