Update hero image and hero content layout

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -28,10 +28,11 @@
       <div class="container">
         <!-- Hero -->
         <div class="row align-items-center py-5 cta">
-           <div class="col-md-6 text-center text-md-left">
+          <div class="col-md-5 text-center mt-4 mt-md-0"></div>
+           <div class="col-md-7 text-center text-md-left">
             <h1 class="mb-4">Get to know your local <span id="js-rotating">café, restaurant, bar</span>.</h1>
             <p>Love your local? Become a regular.</p>
-            <div class="row mt-5 cta-button-group">
+            <div class="row cta-button-group">
               <div class="col-md-auto">
                 <a href="#download" class="btn btn-lg btn-outline-light">Free Download</a>
               </div>
@@ -39,8 +40,6 @@
                 <a href="#section-features" class="btn btn-lg btn-light">Find out more</a>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 text-center mt-4 mt-md-0">
           </div>
         </div>
         <!-- / Hero -->
