--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,4 +1,5 @@
 h1 {
+  color: #fff;
   font-size: 2rem;
   font-weight: 400;
 }
@@ -16,22 +17,14 @@ h1 {
 }
 
 .cta {
-  margin-top: 9rem;
+  margin-top: 4rem;
 }
 
 .cta-button-group {
-  // margin-top: 7rem !important;
+  margin-top: 3rem;
 }
 
 .navbar {
   height: 60px;
   background-color: $regulr-red!important;
 }
-
-// .navbar-dark .navbar-nav .nav-link {
-//   color: black;
-
-//   &:hover {
-//     color: white;
-//   }
-// }
