Add feature icons, logo, and favicon

--- a/_includes/features.html
+++ b/_includes/features.html
@@ -7,14 +7,14 @@
       <div class="col">
         <div class="row my-5">
           <div class="col-md content-feature-sub">
-            <p><span class="icon-themed icon-lg icon-home"></span></p>
+            <img class="feature-icon" src="img/icons/local.svg">
             <h3>Find your local.</h3>
             <p>
               Look up the awesome spots around you and create a list of your favourites.
             </p>
           </div>
           <div class="col-md content-feature-sub">
-            <p><span class="icon-themed icon-lg icon-user"></span></p>
+            <img class="feature-icon" src="img/icons/profile.svg">
             <h3>Make it personal.</h3>
             <p>
               Put a name to your face and an emoji to your name. Show them the real you.
@@ -23,14 +23,14 @@
         </div>
         <div class="row my-5">
           <div class="col-md content-feature-sub">
-            <p><span class="icon-themed icon-lg icon-cup"></span></p>
+            <img class="feature-icon" src="img/icons/order.svg">
             <h3>Grab your usual.</h3>
             <p>
               Know what you want? Order it in a couple of taps, just the way you like it.
             </p>
           </div>
           <div class="col-md content-feature-sub">
-            <p><span class="icon-themed icon-lg icon-heart"></span></p>
+            <img class="feature-icon" src="img/icons/regular.svg">
             <h3>Be a regular.</h3>
             <p>
               Less time at the till means more time chatting with your new mates. Enjoy.
