--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <div id="section-hero">
   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <a class="navbar-brand" href="#">
-          <img src="img/posboss-app.svg" width="50" height="50" alt="Logo">regulr
+          <img class="mr-2" src="img/icons/app-icon-light.svg" width="35" height="35" alt="Logo">regulr
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
