--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Regulr App</title>
+    <title>Regulr by posBoss</title>
     <meta name="description" content="">
 
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
