--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,8 @@
     <div class="row justify-content-center mt-4">
       <div class="col-md-3 text-center">
         <div class="footer-social-media d-flex justify-content-around">
-          <a href="#" class="link-icon"><span class="icon-md icon-dark icon-facebook"></span></a>
-          <a href="#" class="link-icon"><span class="icon-md icon-dark icon-twitter"></span></a>
-          <a href="#" class="link-icon"><span class="icon-md icon-dark icon-instagrem"></span></a>
+          <a href="https://www.facebook.com/regulrapp" class="link-icon"><span class="icon-md icon-dark icon-facebook"></span></a>
+          <a href="https://www.instagram.com/regulrapp" class="link-icon"><span class="icon-md icon-dark icon-instagrem"></span></a>
         </div>
       </div>
     </div>
