--- a/_includes/download.html
+++ b/_includes/download.html
@@ -12,8 +12,8 @@
           <span class="icon-star"></span>
         </div>
         <div class="mt-4">
-          <a href="#"><img src="img/badge-app-store.svg" alt="Download on the App Store" height="50"></a>
-          <a href="#"><img src="img/badge-google-play.png" alt="Get it on Google Play" height="50"></a>
+          <a href="https://itunes.apple.com/nz/app/regulr/id1266157465?mt=8"><img src="img/badge-app-store.svg" alt="Download on the App Store" height="50"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.posbosshq.regular&hl=en"><img src="img/badge-google-play.png" alt="Get it on Google Play" height="50"></a>
         </div>
       </div>
     </div>
