Change link text in benefits, add t&cs and pp

--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -11,7 +11,7 @@
             Become a regular at all your favourite spots, tap to order your favourite snacks and sips,
             and get to know the guys that make your day, everyday.
           </p>
-          <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+          <p><a href="#download" class="btn btn-outline-light">Find Me</a></p>
         </div>
       </div>
     </div>
@@ -26,7 +26,7 @@
              Some days are toastie days. Other days it’s bacon all the way.
              Check out what your local spot’s cooking up today and grab whatever tickles your fancy.
           </p>
-          <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+          <p><a href="#download" class="btn btn-outline-light">Feed Me</a></p>
         </div>
         <div class="col-md text-center mt-4 mt-md-0">
           <img src="img/benefit-02.png" class="img-fluid rounded benefit-img" data-enter="fadein" style="transform: translateY(70px)">
@@ -47,7 +47,7 @@
              Need a coffee and need it now? Want that sammie you love with loads of extra gherkins?
              No problem, just a couple of taps and your usual’s on the way.
           </p>
-          <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+          <p><a href="#download" class="btn btn-outline-light">Tap Me</a></p>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
              Regulr works just like a tab at your local spots, so you can pick up the goods, say a quick hey and be on your way.
              Then every Sunday, your tab gets settled while you chill.
           </p>
-          <p><a href="#download" class="btn btn-outline-light">Download now</a></p>
+          <p><a href="#download" class="btn btn-outline-light">Get Regulr</a></p>
         </div>
         <div class="col-md text-center mt-4 mt-md-0">
           <img src="img/benefit-04.png" class="img-fluid rounded benefit-img" data-enter="fadein" style="transform: translateY(70px)">
