--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,8 @@
     <!-- Legals -->
     <div class="row">
       <div class="col content-footer-legals">
-        Copyright © 2017 Posboss Limited. All Rights Reserved.
+        <p>Copyright © 2017 Posboss Limited. All Rights Reserved.</p>
+        <p>See our <a href="/terms_and_conditions">Terms and Conditions</a> and <a href="/privacy_policy">Privacy Policy</a>.</p>
       </div>
     </div>
     <!-- / Legals -->
